<resources>
    <string name="app_name">My Application</string>

    <!-- Error Messages -->
    <string name="error_invalid_email_format">Invalid email format</string>
    <string name="error_password_requirements">Password must contain at least 8 characters, including uppercase, lowercase, number, and special character</string>
    <string name="error_email_already_registered">Email is already registered</string>

    <!-- Success Messages -->
    <string name="registration_successful">Registration successful</string>
    <string name="next">NEXT</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="remember_me">remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_access_your_account">Sign in to access your account</string>
    <string name="success">Success</string>
    <string name="you_are_logged_in">You are logged in!</string>
    <string name="continue_button">Continue</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log In</string>
    <string name="by_checking_this_box_you_agree_to_our_terms_and_conditions">By checking this box you agree to our Terms and Conditions.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="strong_password">Strong Password</string>
    <string name="background_image">background image</string>
    <string name="get_started">Get Started</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="switch_button">Switch</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="recipe_details">Recipe Details</string>
</resources>